--- a/index.html
+++ b/index.html
@@ -1,68 +1,42 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <title>Website chứng khoán</title>
-  <link rel="stylesheet" href="style.css">
-</head>
 <body>
+  <div class="container">
 
-  <h1>Website hỗ trợ phân tích chứng khoán</h1>
-  <p>Tôi giúp tạo website và công cụ theo dõi cổ phiếu.</p>
+    <h1>Website hỗ trợ phân tích chứng khoán</h1>
+    <p>Tôi giúp tạo website và công cụ theo dõi cổ phiếu.</p>
 
- <p style="max-width:600px; margin:20px auto; color:#555;">
-✔ Hỗ trợ nhà đầu tư cá nhân<br>
-✔ Tạo website – công cụ theo nhu cầu thực tế<br>
-✔ Không phím hàng – không cam kết lợi nhuận<br>
-✔ Làm việc trực tiếp, hỗ trợ nhanh qua Zalo
-</p>
-<!-- NÚT ZALO -->
-<a href="https://zalo.me/0967682073" class="btn" target="_blank">
-    Liên hệ Zalo
-</a>
+    <ul>
+      <li>Hỗ trợ nhà đầu tư cá nhân</li>
+      <li>Tạo website – công cụ theo nhu cầu thực tế</li>
+      <li>Không phím hàng – không cam kết lợi nhuận</li>
+      <li>Làm việc trực tiếp, hỗ trợ nhanh qua Zalo</li>
+    </ul>
 
-  <h2>Dịch vụ của tôi</h2>
-<h2 style="text-align:center; margin-top:60px;">Bảng giá tham khảo</h2>
+    <a href="https://zalo.me/84967682073" class="btn" target="_blank">
+      Liên hệ Zalo
+    </a>
 
-<div class="services">
-  <div class="card">
-    <h3>Landing page chứng khoán</h3>
-    <p>✔ Website 1 trang<br>
-       ✔ Giao diện gọn gàng<br>
-       ✔ Nút Zalo liên hệ<br>
-       ✔ Hoàn thành 3–5 ngày</p>
-    <strong>Giá: từ 1.500.000đ</strong>
-  </div>
+    <h2>Dịch vụ của tôi</h2>
 
-  <div class="card">
-    <h3>Công cụ theo dõi cổ phiếu</h3>
-    <p>✔ Giao diện đơn giản<br>
-       ✔ Theo yêu cầu riêng<br>
-       ✔ Dễ sử dụng</p>
-    <strong>Giá: báo theo nhu cầu</strong>
-  </div>
-</div>
-
-  <div class="services">
-    <div class="service-box">
-      <h3>Website chứng khoán</h3>
-      <p>Tạo website giới thiệu, landing page cho nhà đầu tư.</p>
+    <div class="box">
+      <h3>Landing page chứng khoán</h3>
+      <ul>
+        <li>Website 1 trang</li>
+        <li>Giao diện gọn gàng</li>
+        <li>Nút Zalo liên hệ</li>
+        <li>Hoàn thành 3–5 ngày</li>
+      </ul>
+      <strong>Giá: từ 1.500.000đ</strong>
     </div>
 
-    <div class="service-box">
+    <div class="box">
       <h3>Công cụ theo dõi cổ phiếu</h3>
-      <p>Thiết kế giao diện đơn giản cho công cụ theo dõi.</p>
+      <ul>
+        <li>Giao diện đơn giản</li>
+        <li>Theo yêu cầu riêng</li>
+        <li>Dễ sử dụng</li>
+      </ul>
+      <strong>Giá: báo theo nhu cầu</strong>
     </div>
 
-    <div class="service-box">
-      <h3>Chỉnh sửa website</h3>
-      <p>Chỉnh màu sắc, bố cục, nội dung theo yêu cầu.</p>
-    </div>
   </div>
-
-<a href="https://zalo.me/84967682073" class="zalo-float" target="_blank">
-  Zalo
-</a>
 </body>
-
-</html>
