--- a/index.html
+++ b/index.html
@@ -1,42 +1,67 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <title>Website hỗ trợ phân tích chứng khoán</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
 <body>
-  <div class="container">
 
-    <h1>Website hỗ trợ phân tích chứng khoán</h1>
-    <p>Tôi giúp tạo website và công cụ theo dõi cổ phiếu.</p>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="container">
+      <h1>Website hỗ trợ phân tích chứng khoán</h1>
+      <p class="subtitle">
+        Tôi giúp tạo website & công cụ theo dõi cổ phiếu dành cho nhà đầu tư cá nhân
+      </p>
 
-    <ul>
-      <li>Hỗ trợ nhà đầu tư cá nhân</li>
-      <li>Tạo website – công cụ theo nhu cầu thực tế</li>
-      <li>Không phím hàng – không cam kết lợi nhuận</li>
-      <li>Làm việc trực tiếp, hỗ trợ nhanh qua Zalo</li>
-    </ul>
-
-    <a href="https://zalo.me/84967682073" class="btn" target="_blank">
-      Liên hệ Zalo
-    </a>
-
-    <h2>Dịch vụ của tôi</h2>
-
-    <div class="box">
-      <h3>Landing page chứng khoán</h3>
-      <ul>
-        <li>Website 1 trang</li>
-        <li>Giao diện gọn gàng</li>
-        <li>Nút Zalo liên hệ</li>
-        <li>Hoàn thành 3–5 ngày</li>
+      <ul class="features">
+        <li>Hỗ trợ nhà đầu tư cá nhân</li>
+        <li>Tạo website – công cụ theo nhu cầu thực tế</li>
+        <li>Không phím hàng – không cam kết lợi nhuận</li>
+        <li>Làm việc trực tiếp, hỗ trợ nhanh qua Zalo</li>
       </ul>
-      <strong>Giá: từ 1.500.000đ</strong>
-    </div>
 
-    <div class="box">
-      <h3>Công cụ theo dõi cổ phiếu</h3>
-      <ul>
-        <li>Giao diện đơn giản</li>
-        <li>Theo yêu cầu riêng</li>
-        <li>Dễ sử dụng</li>
-      </ul>
-      <strong>Giá: báo theo nhu cầu</strong>
+      <a class="btn-primary" href="https://zalo.me/0967682073" target="_blank">
+        Liên hệ Zalo
+      </a>
     </div>
+  </section>
 
-  </div>
+  <!-- SERVICES -->
+  <section class="services">
+    <div class="container">
+      <h2>Dịch vụ của tôi</h2>
+
+      <div class="cards">
+        <div class="card">
+          <h3>Landing page chứng khoán</h3>
+          <ul>
+            <li>Website 1 trang</li>
+            <li>Giao diện gọn gàng</li>
+            <li>Nút Zalo liên hệ</li>
+            <li>Hoàn thành 3–5 ngày</li>
+          </ul>
+          <p class="price">Giá: từ 1.500.000đ</p>
+        </div>
+
+        <div class="card">
+          <h3>Công cụ theo dõi cổ phiếu</h3>
+          <ul>
+            <li>Giao diện đơn giản</li>
+            <li>Theo yêu cầu riêng</li>
+            <li>Dễ sử dụng</li>
+          </ul>
+          <p class="price">Giá: báo theo nhu cầu</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2026 – Website hỗ trợ phân tích chứng khoán</p>
+  </footer>
+
 </body>
+</html>
