--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <title>Website hỗ trợ phân tích chứng khoán</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Website hỗ trợ phân tích & theo dõi cổ phiếu</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -10,58 +11,50 @@
   <!-- HERO -->
   <section class="hero">
     <div class="container">
-      <h1>Website hỗ trợ phân tích chứng khoán</h1>
+      <h1>Website hỗ trợ phân tích & theo dõi cổ phiếu</h1>
       <p class="subtitle">
-        Tôi giúp tạo website & công cụ theo dõi cổ phiếu dành cho nhà đầu tư cá nhân
+        Hỗ trợ nhà đầu tư cá nhân xây dựng website và công cụ theo dõi cổ phiếu đơn giản – đúng nhu cầu – không phím hàng.
       </p>
-
-      <ul class="features">
-        <li>Hỗ trợ nhà đầu tư cá nhân</li>
-        <li>Tạo website – công cụ theo nhu cầu thực tế</li>
-        <li>Không phím hàng – không cam kết lợi nhuận</li>
-        <li>Làm việc trực tiếp, hỗ trợ nhanh qua Zalo</li>
-      </ul>
-
-      <a class="btn-primary" href="https://zalo.me/0967682073" target="_blank">
-        Liên hệ Zalo
-      </a>
     </div>
   </section>
 
   <!-- SERVICES -->
   <section class="services">
-    <div class="container">
-      <h2>Dịch vụ của tôi</h2>
+    <div class="container cards">
 
-      <div class="cards">
-        <div class="card">
-          <h3>Landing page chứng khoán</h3>
-          <ul>
-            <li>Website 1 trang</li>
-            <li>Giao diện gọn gàng</li>
-            <li>Nút Zalo liên hệ</li>
-            <li>Hoàn thành 3–5 ngày</li>
-          </ul>
-          <p class="price">Giá: từ 1.500.000đ</p>
-        </div>
-
-        <div class="card">
-          <h3>Công cụ theo dõi cổ phiếu</h3>
-          <ul>
-            <li>Giao diện đơn giản</li>
-            <li>Theo yêu cầu riêng</li>
-            <li>Dễ sử dụng</li>
-          </ul>
-          <p class="price">Giá: báo theo nhu cầu</p>
-        </div>
+      <div class="card">
+        <h3>Landing page chứng khoán</h3>
+        <ul>
+          <li>Website 1 trang</li>
+          <li>Giao diện gọn gàng</li>
+          <li>Có nút Zalo liên hệ</li>
+          <li>Hoàn thành 3–5 ngày</li>
+        </ul>
+        <p class="price">Giá từ 1.500.000đ</p>
       </div>
+
+      <div class="card">
+        <h3>Công cụ theo dõi cổ phiếu</h3>
+        <ul>
+          <li>Theo dõi danh mục cá nhân</li>
+          <li>Giao diện đơn giản</li>
+          <li>Làm theo yêu cầu riêng</li>
+        </ul>
+        <p class="price red">Giá: báo theo nhu cầu</p>
+      </div>
+
+      <div class="card">
+        <h3>Cam kết làm việc</h3>
+        <ul>
+          <li>Không cam kết lợi nhuận</li>
+          <li>Không phím hàng</li>
+          <li>Làm việc trực tiếp</li>
+          <li>Hỗ trợ nhanh qua Zalo</li>
+        </ul>
+      </div>
+
     </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2026 – Website hỗ trợ phân tích chứng khoán</p>
-  </footer>
-
-</body>
-</html>
+  <!-- CTA -->
+  <section class="cta"
