--- a/index.html
+++ b/index.html
@@ -57,4 +57,17 @@
   </section>
 
   <!-- CTA -->
-  <section class="cta"
+  <section class="cta">
+    <div class="container">
+      <h2>Bạn cần website hoặc công cụ theo dõi cổ phiếu?</h2>
+      <p>
+        Nhắn Zalo để trao đổi trực tiếp – tư vấn rõ ràng, không ràng buộc
+      </p>
+      <a href="https://zalo.me/0967682073" target="_blank" class="btn">
+        📱 Nhắn Zalo ngay
+      </a>
+    </div>
+  </section>
+
+</body>
+</html>
